testsuite/tests/grammar/invalid_or/test.out
foo.lkt:5:16: error: Alternatives yield incompatible types: Sequence, Token
4 |     element <- or(atom | sequence)
  |                ^^^^^^^^^^^^^^^^^^^

Done
